// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > importers > documentImporter > importDocuments > multiple files success 1`] = `
{
  "importResult": {
    "fileIds": [
      "123",
      "456",
    ],
    "imageIds": [
      undefined,
      undefined,
    ],
    "modelCardVersions": [
      1,
      2,
    ],
    "newModelCards": [
      {
        "completed": true,
      },
      {
        "completed": true,
      },
    ],
    "newReleases": [
      {
        "completed": true,
      },
      {
        "completed": true,
      },
    ],
    "releaseSemvers": [
      "0.0.1",
      "0.0.2",
    ],
  },
  "mirroredModel": undefined,
}
`;

exports[`services > importers > documentImporter > importDocuments > single file file success 1`] = `
{
  "importResult": {
    "fileIds": [
      "123",
    ],
    "imageIds": [],
    "modelCardVersions": [],
    "newModelCards": [],
    "newReleases": [],
    "releaseSemvers": [],
  },
  "mirroredModel": undefined,
}
`;

exports[`services > importers > documentImporter > importDocuments > single model card file success 1`] = `
{
  "importResult": {
    "fileIds": [],
    "imageIds": [],
    "modelCardVersions": [
      1,
    ],
    "newModelCards": [
      {
        "completed": true,
      },
    ],
    "newReleases": [],
    "releaseSemvers": [],
  },
  "mirroredModel": undefined,
}
`;

exports[`services > importers > documentImporter > importDocuments > single release file success 1`] = `
{
  "importResult": {
    "fileIds": [],
    "imageIds": [],
    "modelCardVersions": [],
    "newModelCards": [],
    "newReleases": [
      {
        "completed": true,
      },
    ],
    "releaseSemvers": [
      "0.0.1",
    ],
  },
  "mirroredModel": undefined,
}
`;

exports[`services > importers > documentImporter > importDocuments > skip non-file entry 1`] = `
{
  "importResult": {
    "fileIds": [],
    "imageIds": [],
    "modelCardVersions": [],
    "newModelCards": [],
    "newReleases": [],
    "releaseSemvers": [],
  },
  "mirroredModel": undefined,
}
`;
